Add invoices spec
