# api/swagger/swagger.yaml
@@ -10,7 +10,6 @@ basePath: /
 schemes:
   # tip: remove http to make production-grade
   - http
-  - https
 # format of bodies a client can send (Content-Type)
 consumes:
   - application/json
@@ -42,6 +41,91 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /invoices:
+    x-swagger-router-controller: invoices
+    get:
+      description: Get invoices
+      operationId: list
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/InvoiceResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Insert a invoice
+      operationId: post
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/InvoiceResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /invoices/{id}:
+    x-swagger-router-controller: invoices
+    get:
+      description: Get the invoice
+      operationId: get
+      parameters:
+        - name: id
+          in: path
+          description: ID of the invoice
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/InvoiceResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      description: Update the invoice
+      operationId: put
+      parameters:
+        - name: id
+          in: path
+          description: ID of the invoice
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/InvoiceResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      description: Delete the invoice
+      operationId: delete
+      parameters:
+        - name: id
+          in: path
+          description: ID of the invoice
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -52,6 +136,21 @@ definitions:
     properties:
       message:
         type: string
+  InvoiceResponse:
+    required:
+      - invoiceId
+      - amountWithoutTax
+      - taxAmount
+      - amountIncludingTax
+    properties:
+      invoiceId:
+        type: integer
+      amountWithoutTax:
+        type: integer
+      taxAmount:
+        type: integer
+      amountIncludingTax:
+        type: integer
   ErrorResponse:
     required:
       - message
